--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
