--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.20.0",
+    "npm": "7.24.2"
   },
   "scripts": {
     "start": "react-scripts start",
